Closed Bug 1639634 Opened 5 years ago Closed 5 years ago

Crash in [@ RtlAcquireSRWLockExclusive | mozilla::TaskQueue::BeginShutdown]

Categories

(Core :: Graphics: Canvas2D, defect, P1)

All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- disabled
firefox76 --- disabled
firefox77 --- disabled
firefox78 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-5090247c-e850-46c9-a543-78bfd0200510.

Top 10 frames of crashing thread:

0 ntdll.dll RtlAcquireSRWLockExclusive 
1 xul.dll mozilla::TaskQueue::BeginShutdown xpcom/threads/TaskQueue.cpp:161
2 xul.dll mozilla::layers::CanvasTranslator::ActorDestroy gfx/layers/ipc/CanvasTranslator.cpp:162
3 xul.dll mozilla::ipc::IProtocol::DestroySubtree ipc/glue/ProtocolUtils.cpp:566
4 xul.dll mozilla::PProcessHangMonitorChild::OnChannelError ipc/ipdl/PProcessHangMonitorChild.cpp:359
5 xul.dll mozilla::detail::RunnableMethodImpl<mozilla::dom::Performance*, void  xpcom/threads/nsThreadUtils.h:1220
6 xul.dll MessageLoop::DoWork ipc/chromium/src/base/message_loop.cc:523
7 xul.dll base::MessagePumpDefault::Run ipc/chromium/src/base/message_pump_default.cc:35
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290

Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/e1a8383cf9f9 Add null check for mTranslationTaskQueue to CanvasTranslator::ActorDestroy. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: