Bug 1639634: Add null check for mTranslationTaskQueue to CanvasTranslator::ActorDestroy. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D76183